# investormate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LAUNCH_SUMMARY.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: publish-trusted.yml.disabled  publish.yml  tests.yml
docs/: ai_providers.md  api_reference.md  backtesting.md  correlation.md  custom_strategies.md  index.md  quickstart.md  sentiment.md  valuation.md
examples/: advanced_ratios.py  ai_analysis.py  backtesting_rsi.py  basic_usage.py  correlation_analysis.py  custom_screening.py  earnings_transcripts.py  multi_provider.py  portfolio_analysis.py  screening.py  sentiment_tracking.py  technical_analysis.py  valuation.py
investormate/: __init__.py  version.py
investormate/ai/: __init__.py  anthropic_provider.py  base_provider.py  gemini_provider.py  openai_provider.py  prompts.py  response_parser.py
investormate/analysis/: __init__.py  correlation.py  indicators.py  ratios.py  scores.py  sentiment.py  valuation.py
investormate/backtest/: __init__.py  backtest.py  engine.py  results.py  strategy.py
investormate/core/: __init__.py  custom_strategy.py  investor.py  market.py  portfolio.py  screener.py  stock.py
investormate/data/: __init__.py  constants.py  earnings_transcripts.py  fetchers.py  parsers.py
investormate/documents/: __init__.py  extractors.py  processors.py
investormate/utils/: __init__.py  exceptions.py  formatters.py  helpers.py  validators.py
tests/: __init__.py  conftest.py  test_advanced_ratios.py  test_backtest.py  test_correlation.py  test_custom_strategy.py  test_earnings_transcripts.py  test_fetchers.py  test_formatters.py  test_helpers.py  test_integration.py  test_sentiment.py  test_validators.py  test_valuation.py
